@@ -1,3 +1,8 @@
+2011-09-14  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mkvmerge: new feature: MPEG TS: Added support for reading the
+	language code.
+
 2011-09-13  Moritz Bunkus  <moritz@bunkus.org>
 
 	* mmg: enhancement: Added MPEG transport streams to the "add file"
